delete route for supermarket completed
