# app/Controllers/SupermarketController.php
@@ -2,6 +2,7 @@
 
 namespace App\Controllers;
 
+use App\Helpers\DynamicRouteParser;
 use App\Helpers\ResponseHelper;
 use App\Services\SupermarketService;
 use App\Validators\SupermarketRequestValidator;
@@ -63,7 +64,7 @@ class SupermarketController extends Controller
      *        ),
      *     @OA\Response(response="201", description="A supermarket is added"),
      *     @OA\Response(response="401", description="Authentication failure"),
-     *     @OA\Response(response="400", description="Input data is invalide"),
+     *     @OA\Response(response="400", description="Input data is invalid"),
      *     @OA\Response(response="422", description="Input data is unprocessable"),
      * )
      */
@@ -92,7 +93,7 @@ class SupermarketController extends Controller
      *            ),
      *        ),
      *     @OA\Response(response="200", description="Supermarket is updated"),
-     *     @OA\Response(response="400", description="Input data is invalide"),
+     *     @OA\Response(response="400", description="Input data is invalid"),
      *     @OA\Response(response="401", description="Authentication failure"),
      *     @OA\Response(response="404", description="Supermarket not found"),
      *     @OA\Response(response="422", description="Input data is unprocessable"),
@@ -107,5 +108,32 @@ class SupermarketController extends Controller
 
         $result = $this->service->updateSupermarket($data);
         if($result) ResponseHelper::sendSuccessJsonResponse('Supermarket updated');
+    }
+
+    /**
+     * @OA\Delete(
+     *     path="/api/supermarket/{id}",
+     *     summary="Delete a supermarket",
+     *     tags={"Supermarket"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(name="id", in="path", required=true,
+     *         @OA\Schema(type="integer"),
+     *         description="The ID of a supermarket",
+     *      ),
+     *     @OA\Response(response="204", description="Supermarket is deleted"),
+     *     @OA\Response(response="400", description="Input data is invalid"),
+     *     @OA\Response(response="401", description="Authentication failure"),
+     *     @OA\Response(response="404", description="Product not found"),
+     * )
+     */
+    public function deleteSupermarket(): void
+    {
+        $this->authenticateAdminUser();
+
+        $id = $this->getIdInUriOrReturnNotFound();
+        $this->validate('validateForDeletingSupermarket', $id);
+
+        $result = $this->service->deleteSupermarket($id);
+        if($result) ResponseHelper::sendSuccessJsonResponse('Supermarket deleted', 204);
     }
 }
