# app/Routes/ApiRoutes.php
@@ -23,6 +23,7 @@ class ApiRoutes {
         $router->get('/api/supermarket/index', [SupermarketController::class, 'index']);
         $router->post('/api/supermarket', [SupermarketController::class, 'addSupermarket']);
         $router->put('/api/supermarket', [SupermarketController::class, 'updateSupermarket']);
+        $router->delete('/api/supermarket/{id}', [SupermarketController::class, 'deleteSupermarket']);
 
         $router->get('/api/test', [TestController::class, 'testGet']);
         $router->dispatchRequest();
